Issue #11961: Adding max-width to user action item to avoid horizontal scroll

--- a/packages/rocketchat-theme/client/imports/components/userInfo.css
+++ b/packages/rocketchat-theme/client/imports/components/userInfo.css
@@ -174,6 +174,7 @@
 		justify-content: center;
 
 		&__item {
+			max-width: 45%;
 			overflow: hidden;
 
 			margin: 0 8px;
